<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="editprofile"
            type="com.medicare.prohealthymedicare.EditProfilFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ProfileFragment">

        <com.google.android.material.button.MaterialButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnback"
            app:backgroundTint="@color/black"
            android:background="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kotakprofil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="PROFIL"
            android:textColor="@color/white"
            android:textSize="48dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:src="@color/white"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/edtfirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/kotakinput"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:hint="@string/firstname"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtlastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kotakinput"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:hint="@string/lastname"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtnohp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kotakinput"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/nohp"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kotakinput"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btncancel"
                    android:layout_width="152dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/kotakinput"
                    android:text="@string/cancel"
                    app:backgroundTint="@color/dasar" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnsimpan"
                    android:layout_width="152dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/kotakinput"
                    android:text="@string/simpan"
                    app:backgroundTint="@color/dasar" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>