<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>
        <variable
            name="registrasi"
            type="com.medicare.prohealthymedicare.RegistrasiFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrasiFragment">

        <ImageView
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="159dp"
                android:layout_height="157dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/logo"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/registrasi"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/praktik"
                    android:textAppearance="@style/textregistrasi" />

                <Spinner
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnpraktik"
                    android:background="@drawable/kotakinput" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggalpraktik"
                    android:textAppearance="@style/textregistrasi" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textAppearance="@style/textregistrasi"

                    android:layout_height="wrap_content"
                    android:id="@+id/edttanggalpraktik"
                    android:background="@drawable/kotakinput" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keluhan"
                    android:textAppearance="@style/textregistrasi" />

                <EditText
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"
                    android:id="@+id/edtkeluhan"
                    android:clickable="false"
                    android:background="@drawable/kotakinputbesar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:background="@drawable/inputwarnadasar"
                    app:backgroundTint="@color/dasar"
                    android:id="@+id/btncancel"
                    android:text="@string/cancel"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/btndaftar"
                    android:background="@drawable/inputwarnadasar"
                    app:backgroundTint="@color/dasar"
                    android:text="@string/daftar"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>