<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="verifikasi"
            type="com.medicare.prohealthymedicare.auth.VerifikasiActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.VerifikasiActivity">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="159dp"
                android:layout_height="157dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/logo"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/verifikasi"
                android:textColor="@color/black"
                android:textSize="36dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtstatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/kotakinput"
                    android:gravity="center"
                    android:hint="@string/status" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnverifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputwarnadasar"
                android:text="@string/verifikasi"
                app:backgroundTint="@color/dasar" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnlogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputwarnadasar"
                android:text="@string/logout"
                app:backgroundTint="@color/dasar" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>